configmap.yml
apiVersion: v1
kind: Pod
metadata:
   name: mysqlpod
spec:
  containers:
   - image: mysql
     name: mysqlcontainer
     ports:
      - containerPort: 3306
