lable.yml
apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod1
   labels:
      app: facebook
   namespace: myns
spec:
  containers:
   - image: nginx
     name: mynginxcontainer
     ports:
      - containerPort: 80
