nfswala.yml
apiVersion: v1
kind: Pod
metadata:
   name: emptywalappod
spec:
   containers:
      - image: nginx
        name: ngcontainer
        volumeMounts:
              - name: htmlfolder
                mountPath: /usr/share/nginx/html
   volumes:
    - name: htmlfolder
      nfs:
        server: "fs-0a0a27313be2cfd70.efs.ap-south-1.amazonaws.com"
        path: /test
