nginxpod.yml
apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod1
spec:
  containers:
   - image: nginx
     name: mynginxcontainer
     ports:
      - containerPort: 80
        hostPort: 80
     volumeMounts:
        - name: myconfigvolume
          mountPath: /etc/nginx/conf.d/
 
  
  volumes:
    - name: myconfigvolume
      configMap:
            name: mynginxconf
