clusteripwala.yml
apiVersion: v1  
kind: Service 
metadata:  
 name: myservice 
spec: 
  sessionAffinity: ClientIP 
  type: ClusterIP 
  ports: 
   - name: http 
     port: 80 
     targetPort: http   
   - name: https
     port: 443
     targetport: https
selector: 
  env: live
