externnalservice.yml
apiVersion: v1
kind: Service
metadata:
   name: exiternal-service
spec:
   type: External
   externalName: tujaena.in
   ports: 
     port: 80
