loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
   name: mylbservice
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: development
