nodeportservice.yml
apiVersion: v1
kind: Service
metadata:
   name: nodeportservice
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
  
  selector:
      env: live
